# obelisk

./: .dockerignore  .gitignore  CLOUD_RUN_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.combined  Dockerfile.simple  README.md  chat_sessions_backup.db.old  cli_chat.py  cloudrun-service.yaml  database.py  debug_frontend_response.py  debug_results_544f92a1-8b8c-4b3a-801a-92ecd8b4b86f_1751564929.json  debug_session_issue.py  deploy-cloudrun.sh  docker-compose.combined.yml  docker-compose.simple.yml  docker-compose.temporal.yml  docker-compose.yml  env.template  fix_mistral_streaming.py  main.py  model_test_results_544f92a1-8b8c-4b3a-801a-92ecd8b4b86f_1751566720.json  pyproject.toml  start-combined.sh  start-docker.sh  start-simple.sh  start.py  start.sh  tasklist.txt  test_backend_direct.py  test_config_override_fix.py  test_frontend_config_override.py  test_openrouter_direct.py  test_session.txt  test_session_models.py
frontend/: Dockerfile.frontend  app.py  requirements.txt
frontend/static/css/: styles.css
frontend/static/js/: conversation-parser.js  main.js  parsers.js
frontend/templates/: index.html
scripts/: prd.txt  start-temporal-local.sh  temporal-dev.sh
src/: cli_temporal.py
src/api/: __init__.py  chat.py  router.py  sessions.py
src/config/: settings.py
src/database/: manager.py
src/models/: __init__.py  capabilities.py  chat.py  dynamic_tools.py  session_state.py
src/temporal/: client.py
src/tools/: __init__.py  base.py  exceptions.py  registry.py  schemas.py
temporal-config/: development-sql.yaml
(+17 files in other folders)
